# docere

./: .gitignore  .nojekyll  .pre-commit-config.yaml  01_Introduccion.html  404.html  Natura-Docens.epub  Plan-para-docentes-de-Ciencias-Naturales.epub  README.md  bibliografia.html  index.html  natura-docens.epub  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
01_Generalidades/: 01_Introduccion.html  02_PlanDeArea.html
02_Sexto/: Biologia.html
03_Septimo/: Fisica.html  Quimica.html
04_Octavo/: Biologia.html  Quimica.html
05_Noveno/: Quimica.html
06_Decimo/: Biologia.html  Quimica.html  escritura_quimica.html  estilo-mermaid.html  plan-clase-ley-de-senos.html  plan-clase-masa-molar.html  plan-clase-proposicion-negacion.html  plan-clase-reactivo-limitante.html  reactivo_limite.html  teorema_del_seno.html
07_Once/: QUIMICA.html
Bibliotheca/: SKILL.md
Bibliotheca/agents/: extractor.md  retroalimentador.md  toc_matcher.md  validador.md
Bibliotheca/scripts/: extraer.py  extraer_pdf.py  validar.py
_extensions/: edu-boxes.css
_styles/: headings.css
artifex/: SKILL.md  package-lock.json
book/: 404.qmd  _quarto.yml  bibliografia.qmd  index.qmd  references.bib
book/02_Sexto/: Biologia.qmd
docere/: pdf_utils.py
liber/: .gitignore  404.qmd  _language.yml  _quarto.yml  index.aux  index.qmd  index.tex  index.toc  natura-docens.tex  preamble.tex  references.bib
pipeline/: SKILL.md
tests/: conftest.py  test_convert_input_to_md.py  test_extraer_pdf.py  test_integration.py  test_validate_output.py
(+75 files in other folders)
