[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "docere"
version = "2.0.0"
description = "Monorepo para generar planes de clase de Ciencias Naturales (Colombia)"
authors = [{ name = "Camilo Tayac" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.23",
    "python-docx>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[tool.setuptools.packages.find]
include = ["docere*"]

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
